# dca-backtester

./: .cursor.json  .env.example  .gitignore  .pre-commit-config.yaml  Procfile  README.md  TESTING.md  fetch_all_history.py  nixpacks.toml  plan.md  pyproject.toml  railway.toml  requirements.txt  streamlit_app.py  test_api.py  test_cryptocompare.py  upload_to_drive.py  wizard_streamlit_app.py
.github/workflows/: python-app.yml
.streamlit/: config.toml
data/: ADA.csv  BNB.csv  BTC.csv  ETH.csv  LINK.csv  MATIC.csv  XRP.csv
dca_backtester/: __init__.py  ai_analysis.py  backtester.py  backtester_app.py  config.py  exceptions.py  main.py  models.py  portfolio.py  web_app.py  web_app_backup.py  wizard_app.py
dca_backtester/client/: __init__.py  base.py  coingecko.py  coinmarketcap.py  cryptocompare.py  google_drive.py  local_csv.py
dca_backtester/metrics/: metrics.py
dca_backtester/services/: __init__.py  base_agent.py  mocks.py  wallet_manager.py
dca_backtester/simulator/: backtester.py  price_point.py
dca_backtester/ui/: __init__.py  charts.py  insights.py  live_execution.py  state_manager.py  styles.py
dca_backtester/utils/: ai_insights.py  date_utils.py  logging.py
tests/: __init__.py  conftest.py  test_ai_analysis.py  test_backtester.py  test_runner.py
tests/integration/: test_agent_integration.py
tests/services/: test_base_agent.py  test_wallet_manager.py
tests/ui/: __init__.py  test_live_execution.py
